fix style collapse in 'grid.html'
replace css class '.show-grid' to '.ge-show-grid' to escape overlapping styles which are derived from 'docs.min.css'

--- a/liquid/_includes/grid/sidebar-and-box.html
+++ b/liquid/_includes/grid/sidebar-and-box.html
@@ -12,25 +12,25 @@
     <div class="col-xs-10">
       <div class="box">
         <h1>Sidebar &amp; Box</h1>
-        <div class="row show-grid">
+        <div class="row ge-show-grid">
           <div class="col-xs-12"><p>1/1</p></div>
         </div>
-        <div class="row show-grid">
+        <div class="row ge-show-grid">
           <div class="col-xs-6"><p>1/6</p></div>
           <div class="col-xs-6"><p>1/6</p></div>
         </div>
-        <div class="row show-grid">
+        <div class="row ge-show-grid">
           <div class="col-xs-4"><p>1/3</p></div>
           <div class="col-xs-4"><p>1/3</p></div>
           <div class="col-xs-4"><p>1/3</p></div>
         </div>
-        <div class="row show-grid">
+        <div class="row ge-show-grid">
           <div class="col-xs-3"><p>1/4</p></div>
           <div class="col-xs-3"><p>1/4</p></div>
           <div class="col-xs-3"><p>1/4</p></div>
           <div class="col-xs-3"><p>1/4</p></div>
         </div>
-        <div class="row show-grid mobile-disable">
+        <div class="row ge-show-grid mobile-disable">
           <div class="col-xs-2"><p>1/6</p></div>
           <div class="col-xs-2"><p>1/6</p></div>
           <div class="col-xs-2"><p>1/6</p></div>
