--- a/liquid/_includes/grid/mobile-disable.html
+++ b/liquid/_includes/grid/mobile-disable.html
@@ -1,5 +1,5 @@
 <div class="container mobile-disable">
-  <div class="row show-grid">
+  <div class="row ge-show-grid">
     <div class="col-xs-1"><p>1/12</p></div>
     <div class="col-xs-1"><p>1/12</p></div>
     <div class="col-xs-1"><p>1/12</p></div>
