--- a/liquid/_includes/components/forms.html
+++ b/liquid/_includes/components/forms.html
@@ -24,15 +24,41 @@
     </div>
     <button type="submit" class="btn btn-default">Sign In</button>
   </form>
+<br>
+{% highlight html %}
+<!-- Basic Example -->
+<form role="form">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputFile">File input</label>
+    <input type="file" id="exampleInputFile">
+    <p class="help-block">Example block-level help text here.</p>
+  </div>
+  <div class="checkbox">
+    <label>
+      <input type="checkbox"> Check me out
+    </label>
+  </div>
+  <button type="submit" class="btn btn-default">Sign In</button>
+</form>
+{% endhighlight %}
+
 
   <h2>Inline Form</h2>
   <form class="form-inline" role="form">
     <div class="form-group">
-      <label class="sr-only" for="exampleInputEmail2">Email address</label>
+      <label for="exampleInputEmail2">Email address</label>
       <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter email">
     </div>
     <div class="form-group">
-      <label class="sr-only" for="exampleInputPassword2">Password</label>
+      <label for="exampleInputPassword2">Password</label>
       <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password">
     </div>
     <div class="checkbox">
@@ -42,6 +68,26 @@
     </div>
     <button type="submit" class="btn btn-default">Sign in</button>
   </form>
+<br>
+{% highlight html %}
+<!-- Inline Form -->
+<form class="form-inline" role="form">
+  <div class="form-group">
+    <label for="exampleInputEmail2">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword2">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password">
+  </div>
+  <div class="checkbox">
+    <label>
+      <input type="checkbox"> Remember me
+    </label>
+  </div>
+  <button type="submit" class="btn btn-default">Sign in</button>
+</form>
+{% endhighlight %}
 
   <h2>Horizontal Form</h2>
   <form class="form-horizontal" role="form">
@@ -72,30 +118,58 @@
       </div>
     </div>
   </form>
+<br>
+{% highlight html %}
+<form class="form-horizontal" role="form">
+  <div class="form-group">
+    <label for="inputEmail3" class="col-sm-3 control-label">Email address</label>
+    <div class="col-sm-9">
+      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="inputPassword3" class="col-sm-3 control-label">Password</label>
+    <div class="col-sm-9">
+      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-3 col-sm-9">
+      <div class="checkbox">
+        <label>
+          <input type="checkbox"> Remember me
+        </label>
+      </div>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-3 col-sm-9">
+      <button type="submit" class="btn btn-default">Sign in</button>
+    </div>
+  </div>
+</form>
+{% endhighlight %}
 
-  <h2>Horizontal Form</h2>
-  <form class="form-horizontal" role="form">
-    <div class="form-group">
-      <label for="inputAddress" class="col-sm-3 control-label">Address Details</label>
+  <h2>Form with categories</h2>
+  <form class="form-category clearfix" role="form">
+    <div class="form-group clearfix">
+      <div class="col-sm-3"><p class="form-category-title">Address Details</p></div>
       <div class="col-sm-9">
-        <p class="form-control-static">Full Name</p>
-        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-        <p class="form-control-static">Country</p>
-        <select class="form-control">
-          <option>United States</option>
-          <option>United States</option>
-          <option>United States</option>
-          <option>United States</option>
-          <option>United States</option>
-          <option>United States</option>
-        </select>
+            <label for="inputFullName">Full Name</label>
+            <input type="text" class="form-control" id="inputFullName" placeholder="First Name,Last Name">
+            <label for="selectCountry">Country</label>
+            <select id="selectCountry" class="form-control">
+              <option>United States</option>
+              <option>United States</option>
+              <option>United States</option>
+              <option>United States</option>
+              <option>United States</option>
+              <option>United States</option>
+            </select>
       </div>
     </div>
-  </form>
-  <hr />
-  <form class="form-horizontal" role="form">
-    <div class="form-group">
-      <label for="inputTimezone" class="col-sm-3 control-label">Timezone</label>
+    <div class="form-group clearfix">
+      <div class="col-sm-3"><p class="form-category-title">Timezone</p></div>
       <div class="col-sm-9">
         <select class="form-control">
           <option>(UTC - 07:00) USA / San Francisco</option>
@@ -107,5 +181,39 @@
       </div>
     </div>
   </form>
+  <br>
+{% highlight html %}
+<!-- Form with categories -->
+<form class="form-category clearfix" role="form">
+  <div class="form-group clearfix">
+    <div class="col-sm-3"><p class="form-category-title">Address Details</p></div>
+    <div class="col-sm-9">
+          <label for="inputFullName">Full Name</label>
+          <input type="text" class="form-control" id="inputFullName" placeholder="First Name,Last Name">
+          <label for="selectCountry">Country</label>
+          <select id="selectCountry" class="form-control">
+            <option>United States</option>
+            <option>United States</option>
+            <option>United States</option>
+            <option>United States</option>
+            <option>United States</option>
+            <option>United States</option>
+          </select>
+    </div>
+  </div>
+  <div class="form-group clearfix">
+    <div class="col-sm-3"><p class="form-category-title">Timezone</p></div>
+    <div class="col-sm-9">
+      <select class="form-control">
+        <option>(UTC - 07:00) USA / San Francisco</option>
+        <option>(UTC - 07:00) USA / San Francisco</option>
+        <option>(UTC - 07:00) USA / San Francisco</option>
+        <option>(UTC - 07:00) USA / San Francisco</option>
+        <option>(UTC - 07:00) USA / San Francisco</option>
+      </select>
+    </div>
+  </div>
+</form>
+{% endhighlight %}
 
 </div>
