--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -15,7 +15,7 @@ $btn-darken-percent: 7%;
     border-color: $color;
     background-color: $color;
     background-image: none;
-    box-shadow: inset 0 0 6px rgba(0,0,0,.12);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, .12);
   }
 }
 
@@ -64,10 +64,10 @@ a,
 
 .btn-default {
   @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border);
-  @include gradient-vertical(white, darken(white, 6%), 0%, 100%);
+  @include gradient-vertical(#fff, darken(#fff, 6%), 0%, 100%);
   &:hover,
   &:focus {
-    @include gradient-vertical(darken(white, 3%), darken(white, 9%), 0%, 100%);
+    @include gradient-vertical(darken(#fff, 3%), darken(#fff, 9%), 0%, 100%);
     border-color: darken(#ddd, 12%);
   }
 }
@@ -93,7 +93,8 @@ a,
     @include get-btn-base($btn-translator-color, $btn-translator-bg, $btn-translator-border, $brand-translator);
   }
 
-  a, .btn-link {
+  a,
+  .btn-link {
     color: $link-translator-color;
     &:hover { color: $link-translator-hover-color; }
   }
@@ -104,7 +105,8 @@ a,
     @include get-btn-base($btn-developer-color, $btn-developer-bg, $btn-developer-border, $brand-developer);
   }
 
-  a, .btn-link {
+  a,
+  .btn-link {
     color: $link-developer-color;
     &:hover { color: $link-developer-hover-color; }
   }
