--- a/scss/_dropdowns.scss
+++ b/scss/_dropdowns.scss
@@ -16,7 +16,7 @@
 .dropdown-menu {
   min-width: 120px;
   border-radius: 5px;
-  box-shadow: 0 1px 6px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 6px 1px rgba(0, 0, 0, .2);
 
   > li > a {
     color: $text-color;
