--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: 'Open Sans';
-  src: url('./fonts/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-       url('./fonts/OpenSans-Regular-webfont.woff') format('woff'),
-       url('./fonts/OpenSans-Regular-webfont.ttf')  format('truetype')
+  font-family: "Open Sans";
+  src: url("./fonts/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"),
+       url("./fonts/OpenSans-Regular-webfont.woff") format("woff"),
+       url("./fonts/OpenSans-Regular-webfont.ttf")  format("truetype");
   }
