--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -1,13 +1,13 @@
 .box {
   padding-right: ($grid-gutter-width / 2);
-  padding-left:  ($grid-gutter-width / 2);
-  border: 1px solid #DBDBDB;
+  padding-left: ($grid-gutter-width / 2);
+  border: 1px solid #dbdbdb;
   border-radius: 3px;
   background-color: $box-bg;
 
   @media (min-width: $screen-sm-min) {
     padding-right: $grid-gutter-width;
-    padding-left:  $grid-gutter-width;
+    padding-left: $grid-gutter-width;
   }
 }
 
@@ -23,11 +23,11 @@
 // Grid colum customise
 [class*="col-"] {
   padding-right: 12px;
-  padding-left:  12px;
+  padding-left: 12px;
 }
 @media (min-width: $screen-sm-min) {
   [class*="col-"] {
     padding-right: ($grid-gutter-width / 2);
-    padding-left:  ($grid-gutter-width / 2);
+    padding-left: ($grid-gutter-width / 2);
   }
 }
