--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -1,7 +1,7 @@
 .modal-content {
   padding: 32px 36px 36px;
   border: 0;
-  box-shadow: 0 0 8px rgba(0,0,0,.4);
+  box-shadow: 0 0 8px rgba(0, 0, 0, .4);
 
   .close {
     position: absolute;
@@ -9,15 +9,16 @@
     right: 13px;
   }
   .modal-header {
-    margin: 0 0 12px 0;
+    margin: 0 0 12px;
     padding: 0;
     border: 0;
-  }
-  .modal-header .modal-title {
-    margin: 0;
-    font-weight: $font-semibold;
-    font-size: 28px;
-    line-height: 36px;
+
+    .modal-title {
+      margin: 0;
+      font-weight: $font-semibold;
+      font-size: 28px;
+      line-height: 36px;
+    }
   }
   .modal-body {
     margin-bottom: 20px;
