change to load css files that are used only for github pages
This 2 files are concatenated into 'css/docs.all.css'
- css/docs.css
- css/docs.min.css

--- a/liquid/_layouts/default.html
+++ b/liquid/_layouts/default.html
@@ -21,8 +21,7 @@ navigation:
   <link rel="stylesheet" href="assets/css/gengo-bootstrap-theme.css">
   <link rel="stylesheet" href="assets/css/bootstrap-multiselect.css">
   <link rel="stylesheet" href="assets/css/gengo.css">
-  <link rel="stylesheet" href="assets/css/docs.min.css">
-  <link rel="stylesheet" href="assets/css/docs.css">
+  <link rel="stylesheet" href="assets/css/docs.all.css">
 </head>
 <body>
   <header class="navbar navbar-static-top ge-navbar" role="banner">
