tweak css of docs.css

--- a/scss/docs.scss
+++ b/scss/docs.scss
@@ -60,12 +60,12 @@
   }
   .btn-toolbar {
     margin-top: 20px;
-    .dropdown-menu,
-    .multiselect-container {
-      position: static;
-    }
   }
-  & > .dropdown > .dropdown-menu {
+  .dropdown-menu,
+  .multiselect-container {
+    position: static;
+  }
+  > .dropdown > .dropdown-menu {
     position: static;
     display: block;
     margin-bottom: 5px;
