--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -158,6 +158,11 @@ $table-bg-active:               $table-bg-hover !default;
 //** Border color for table and cell borders.
 $table-border-color:            #ddd !default;
 
+//** Font size
+$table-header-font-size:        12px !default;
+//** Text color
+$table-color-default:           #333!default;
+
 
 //== Buttons
 //
