--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -28,13 +28,13 @@
   }
   tr {
     .reward {
-      color: #4c4643;
+      color: #4c4743;
       text-align: right;
       font-weight: bold;
     }
     .text {
       padding-left: 32px;
-      color: #4c4743;
+      color: $text-color;
     }
   }
   .lang-from:after {
