--- a/liquid/_includes/components/forms.html
+++ b/liquid/_includes/components/forms.html
@@ -69,22 +69,20 @@
 <br>
 {% highlight html %}
 <!-- Inline Form -->
-<form class="form-inline" role="form">
-  <div class="form-group">
-    <label for="exampleInputEmail2">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter email">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword2">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password">
-  </div>
-  <div class="checkbox">
-    <label>
-      <input type="checkbox"> Remember me
-    </label>
-  </div>
-  <button type="submit" class="btn btn-default">Sign in</button>
-</form>
+  <form class="form-inline" role="form">
+    <div class="form-group">
+        <input type="email" class="form-control" placeholder="Enter email">
+    </div>
+    <div class="form-group">
+      <input type="password" class="form-control" placeholder="Password">
+    </div>
+    <div class="checkbox">
+      <label>
+        <input type="checkbox"> Remember me
+      </label>
+    </div>
+    <button type="submit" class="btn btn-default">Sign in</button>
+  </form>
 {% endhighlight %}
 
   <h2>Horizontal Form</h2>
