add 1 pattern 'simple text field' into 'editable text'

--- a/liquid/_includes/components/editable-text.html
+++ b/liquid/_includes/components/editable-text.html
@@ -2,8 +2,22 @@
   <h1 id="editable-text">Editable text</h1>
   <hr>
 
-
 <h2>simple text field </h2>
+<div class="row bs-editable">
+  <div class="col-md-6">
+    <div>
+      <div class="editable-input" style="position: relative;">
+        <input type="text" class="form-control input-sm" style="padding-right: 24px;" value="superuser"><span class="editable-clear-x"></span></div><div class="editable-buttons"><button type="submit" class="btn btn-primary btn-sm editable-submit"><i class="glyphicon glyphicon-ok"></i></button><button type="button" class="btn btn-default btn-sm editable-cancel"><i class="glyphicon glyphicon-remove"></i></button>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6 ui">
+    <a id="username" href="#"  data-type="text" data-pk="1" data-title="Enter username">superuser</a>
+  </div>
+</div>
+
+
+
 <br>
 {% highlight html %}
 <div class="hoge">definitely sample</div>
