--- a/scss/gengo.scss
+++ b/scss/gengo.scss
@@ -12,6 +12,7 @@
 @import "forms";
 @import "dropdowns";
 @import "tables";
+@import "editable-text";
 @import "modals";
 @import "status";
 @import "breadcrumbs";
