--- a/liquid/_layouts/default.html
+++ b/liquid/_layouts/default.html
@@ -20,6 +20,7 @@ navigation:
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="assets/css/gengo-bootstrap-theme.css">
   <link rel="stylesheet" href="assets/css/bootstrap-multiselect.css">
+  <link href="http://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
   <link rel="stylesheet" href="assets/css/gengo.css">
   <link rel="stylesheet" href="assets/css/docs.all.css">
 </head>
@@ -65,7 +66,8 @@ navigation:
   <!-- JS -->
   <script src="http://code.jquery.com/jquery-1.9.0.js"></script>
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="./assets/js/bootstrap-multiselect.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+  <script src="./assets/js/bootstrap-multiselect.js"></script>
   <script src="./assets/js/main.js"></script>
 
 </body>
