--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -279,6 +279,11 @@ $dropdown-caret-color:           #000 !default;
 //** Dropdown container border radius
 $dropdown-border-radius: 5px !default;
 
+//== Editable text
+//
+//##
+$editable-input-color:           #333 !default;
+
 
 //-- Z-index master list
 //
