update _icons.scss on Tina's iconfont update

--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -5,11 +5,11 @@
   font-weight: normal;
   font-style: normal;
   font-family: "icomoon";
-  src: url("../fonts/icomoon.eot?-3uz68h");
-  src: url("../fonts/icomoon.eot?#iefix-3uz68h") format("embedded-opentype"),
-       url("../fonts/icomoon.woff?-3uz68h") format("woff"),
-       url("../fonts/icomoon.ttf?-3uz68h") format("truetype"),
-       url("../fonts/icomoon.svg?-3uz68h#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?gkddpb");
+  src: url("../fonts/icomoon.eot?#iefixgkddpb") format("embedded-opentype"),
+       url("../fonts/icomoon.woff?gkddpb") format("woff"),
+       url("../fonts/icomoon.ttf?gkddpb") format("truetype"),
+       url("../fonts/icomoon.svg?gkddpb#icomoon") format("svg");
 }
 
 [class^="icon-"],
