use -size-large

--- a/scss/docs.scss
+++ b/scss/docs.scss
@@ -131,7 +131,7 @@
   [class^="icon-"],
   [class*=" icon-"] {
     display: block;
-    font-size: 16px;
+    font-size: $font-size-large;
   }
 
   li {
