add typography sample code

--- a/liquid/_includes/style/typography.html
+++ b/liquid/_includes/style/typography.html
@@ -5,12 +5,24 @@
   <h2>Header 2</h2>
   <h3>Header 3</h3>
   <h4>Header 4</h4>
+{% highlight html %}
+<h1>Header 1</h1>
+<h2>Header 2</h2>
+<h3>Header 3</h3>
+<h4>Header 4</h4>
+{% endhighlight %}
 
   <h2>Default paragraph</h2>
   <p>Gengo is using a sans-serif Google Font called Open Sans designed Steve Matteson. We have chosen this font because of it’s organic, friendly and neutral appearance and it’s high legibility throughout all digital devices. It was important for us to chose a Humanist typeface, since we are a company that offers human translation.</p>
+{% highlight html %}
+  <p>...</p>
+{% endhighlight %}
 
   <h2>Small paragraph</h2>
   <p class="small">Gengo is using a sans-serif Google Font called Open Sans designed Steve Matteson. We have chosen this font because of it’s organic, friendly and neutral appearance and it’s high legibility throughout all digital devices. It was important for us to chose a Humanist typeface, since we are a company that offers human translation.</p>
+{% highlight html %}
+  <p class="small">...</p>
+{% endhighlight %}
 
   <h2>Dotted list</h2>
   <p>A paragraph of text that’s before the list:</p>
@@ -20,6 +32,11 @@
     <li>List item three</li>
     <li>List item four</li>
   </ul>
+{% highlight html %}
+<ul>
+  <li>...</li>
+</ul>
+{% endhighlight %}
 
   <h2>Numbered list</h2>
   <p>A paragraph of text that’s before the list:</p>
@@ -29,10 +46,22 @@
     <li>List item three</li>
     <li>List item four</li>
   </ol>
+{% highlight html %}
+<ol>
+  <li>...</li>
+</ol>
+{% endhighlight %}
 
   <h2>Quotes</h2>
   <p>A paragraph of text that’s before the quote:</p>
   <blockquote>
     <p>Gengo is using a sans-serif Google Font called Open Sans designed Steve Matteson. We have chosen this font because of it’s organic, friendly and neutral appearance and it’s high legibility throughout all digital devices. It was important for us to chose a Humanist typeface, since we are a company that offers human translation.</p>
   </blockquote>
+{% highlight html %}
+<blockquote>
+  <p>...</p>
+</blockquote>
+{% endhighlight %}
+
+
 </div>
