add favicon iamges

--- a/liquid/_layouts/default.html
+++ b/liquid/_layouts/default.html
@@ -22,6 +22,8 @@ navigation:
   <link rel="stylesheet" href="assets/css/bootstrap-multiselect.css">
   <link rel="stylesheet" href="assets/css/gengo.css">
   <link rel="stylesheet" href="assets/css/docs.all.css">
+  <!-- Favicons -->
+  <link rel="icon" href="assets/favicons/gengo.ico" type="image/x-icon">
 </head>
 <body>
   <header class="navbar navbar-static-top ge-navbar" role="banner">
