--- a/liquid/_includes/style/favicons.html
+++ b/liquid/_includes/style/favicons.html
@@ -1,4 +1,21 @@
+{% assign icons = "gengo|customer|translator|developer|admin" | split: "|" %}
+
 <div class="box">
   <h1 id="favicons">Favicons</h1>
   <hr/>
+
+  <ul class="list-inline favicons">
+    {% for name in icons %}
+      <li>
+        <img src="/assets/images/docs/{{ name }}.png" width="32" height="32" alt="{{ name }}">
+        <div class="text">{{ name }}</div>
+      </li>
+    {% endfor %}
+   </ul>
+{% highlight html %}
+<link rel="icon" href="assets/favicons/gengo.ico" type="image/x-icon">
+<link rel="icon" href="assets/favicons/customer.ico" type="image/x-icon">
+<link rel="icon" href="assets/favicons/translator.ico" type="image/x-icon">
+{% endhighlight %}
+
 </div>
