--- a/scss/docs.scss
+++ b/scss/docs.scss
@@ -108,7 +108,7 @@
     top: 13px;
     // right:13px;
     // left:23px;
-  };
+  }
   h1[id] {
     padding-top: 30px;
   }
@@ -119,5 +119,30 @@
   h2 {
     margin-top: 25px;
     margin-bottom: 20px;
+  }
+}
+
+// Favicons
+.favicons {
+  margin-left: -32px;
+
+  li {
+    margin-bottom: 34px;
+    margin-left: 32px;
+    padding: 24px 0 10px;
+    width: 102px;
+    background-color: $body-bg;
+    text-align: center;
+
+    img {
+      width: 32px;
+      height: 32px;
+    }
+  }
+
+  .text {
+    margin-top: 4px;
+    text-transform: uppercase;
+    font-size: 10px;
   }
 }
