fix favicon file path

--- a/liquid/_includes/style/favicons.html
+++ b/liquid/_includes/style/favicons.html
@@ -5,7 +5,7 @@
   <ul class="list-inline favicons">
     {% for name in site.data.favicons %}
       <li>
-        <img src="/assets/images/docs/{{ name }}.png" width="32" height="32" alt="{{ name }}">
+        <img src="assets/images/docs/{{ name }}.png" width="32" height="32" alt="{{ name }}">
         <div class="text">{{ name }}</div>
       </li>
     {% endfor %}
