--- a/scss/gengo.scss
+++ b/scss/gengo.scss
@@ -8,6 +8,7 @@
 @import "buttons";
 @import "button-groups";
 @import "icons";
+@import "doctype-icons";
 @import "navs";
 @import "forms";
 @import "dropdowns";
