[#73271218] html for doctype icons & icons

--- a/liquid/_includes/style/icons.html
+++ b/liquid/_includes/style/icons.html
@@ -4,16 +4,16 @@
   <ul class="list-inline icons">
     {% for name in site.data.icons %}
       <li>
-        <span class="icon-{{ name }}"></span>
+        <i class="icon-{{ name }}"></i>
         <div class="text">{{ name }}</div>
       </li>
     {% endfor %}
    </ul>
 
 {% highlight html %}
-<span class="icon-user"></span>
-<span class="icon-email"></span>
-<span class="icon-settings"></span>
+<i class="icon-user"></i>
+<i class="icon-email"></i>
+<i class="icon-settings"></i>
 {% endhighlight %}
 
 </div>
