--- a/liquid/_includes/style/doctype-icons.html
+++ b/liquid/_includes/style/doctype-icons.html
@@ -5,15 +5,15 @@
   <ul class="list-inline doctype">
     {% for doctype in site.data.doctype %}
       <li>
-        <span class="{{ doctype.class }}"></span>
+        <i class="{{ doctype.class }}"></i>
         <div class="text">{{ doctype.name }}</div>
       </li>
     {% endfor %}
    </ul>
 {% highlight html %}
-<span class="doctype-def"></span>
-<span class="doctype-txt"></span>
-<span class="doctype-doc"></span>
+<i class="doctype-def"></i>
+<i class="doctype-txt"></i>
+<i class="doctype-doc"></i>
 {% endhighlight %}
 
 </div>
