[#73271234] base for apple touch icons

--- a/liquid/_includes/style/apple-touch-icons.html
+++ b/liquid/_includes/style/apple-touch-icons.html
@@ -1,4 +1,24 @@
 <div class="box">
   <h1 id="apple-touch-icons">Apple touch icons</h1>
   <hr/>
+
+  <ul class="list-inline apple-touch-icons">
+    <li class="customer">
+      <div class="logo"></div>
+      <p>Customer</p>
+    </li>
+    <li class="translator">
+      <div class="logo"></div>
+      <p>Translator</p>
+    </li>
+    <li class="developer">
+      <div class="logo"></div>
+      <p>Developer</p>
+    </li>
+    <li class="admin">
+      <div class="logo"></div>
+      <p>Admin</p>
+    </li>
+   </ul>
+
 </div>
